# rost_sessionizer

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  utils.rs
src/commands/: cli.rs  kill.rs  mod.rs  open.rs  startup.rs
